# vhash

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci_macos.yml  ci_ubuntu.yml
cmake/: FindFFMPEG.cmake  FindFFTW.cmake
cmd/: vhash.cpp
include/: vhash_app.h  vhash_error.h  vhash_hash.h
include/internal/: app.h  cache.h  imagehash.h  scan.h  util.h
src/app/: app.cpp  cache.cpp  dup.cpp  hash.cpp
src/cache/: sqlite.cpp
src/hash/: hash.cpp
src/scan/: scan.cpp
src/util/: file.cpp  video.cpp
tests/: cache_bench.cpp  cache_test.cpp  hash_bench.cpp  hash_test.cpp  imagehash_bench.cpp  imagehash_test.cpp  scan_test.cpp
tests/python/: pyimagehash.py  requirements.txt
